--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -1,1 +1,18 @@
-<p>inicio works!</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <article>
+        <section class="up">
+            <p class="title">Bienvenido a Muela Manufacturas S.A.</p>
+        </section>
+        <section class="menu">
+           <button></button>
+        </section>
+    </article>
+</body>
+</html>
