--- a/src/app/empresas/crear-empresa/crear-empresa.component.html
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.html
@@ -1,1 +1,23 @@
-<p>crear-empresa works!</p>
+<form [formGroup]="formEmpresa" (ngSubmit)="crearEmpresa()">
+   
+    <div>
+        <label for="nombreEmpresa">Nombre Empresa</label>
+        <input type="text" id="nombreEmpresa" formControlName="nombreEmpresa">
+    </div>
+    <!-- <div>
+        <label for="idDireccion">Id Direccion</label>
+        <input type="number" id="idDireccion" formControlName="idDireccion"> 
+        <button type="submit">Selecciona </button>
+    </div> -->
+    <div>
+    <label for="idDireccion">Seleccione la direccion</label>
+    <select id="idDireccion" formControlName="idDireccion">
+            <option *ngFor="let direccion of direcciones" [value]="direccion.idDireccion">{{direccion.direccion}}</option>
+       
+    </select> 
+</div>
+    <div>
+        <button type="submit">Guardar</button>
+        <button (click)= "limpiarCampos()">Limpiar</button>
+    </div>
+</form>
