--- a/src/app/direcciones/listar-direccion/listar-direccion.component.html
+++ b/src/app/direcciones/listar-direccion/listar-direccion.component.html
@@ -1,1 +1,26 @@
-<p>listar-direccion works!</p>
+<h1>Direcciones</h1>
+<button routerLink="../crear-direccion">Añadir direccion</button>
+
+<table class="direcciones">
+    <tr>
+        <th>DIRECCIÓN</th>
+        <th>CÓDIGO POSTAL</th>
+        <th>DESTINO</th>
+          <th></th>
+        
+    </tr>
+    <tr *ngFor="let direccion of direcciones">
+         <td>{{direccion.direccion}}</td>
+         <td>{{direccion.codigoPostal}}</td>
+         <td>{{direccion.destino}}</td>
+         <!-- <td>{{empresa.idDireccion}}</td> -->
+         <td>
+             <button  routerLink="/editar-direccion/{{direccion._idDireccion}}">
+                 <img src="assets/edit-2.svg">
+             </button>
+             <button  (click)="borrarDireccion(direccion._idDireccion)">
+                 <img src="assets/trash.svg">
+             </button>
+         </td>
+    </tr>
+</table>
