--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -3,16 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>inicio</title>
 </head>
 <body>
     <article>
-        <section class="up">
-            <p class="title">Bienvenido a Muela Manufacturas S.A.</p>
+        <section>
+            <h1 class="title" routerLink="./inicio/inicio/inicio.component" >Bienvenido a Muela Manufacturas S.A.</h1>
         </section>
-        <section class="menu">
-           <button></button>
-        </section>
+        <aside class="menu">
+            <section>
+                <button class="buttom" 
+                        routerLink="productos/listar-producto"> 
+                                Productos
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                        routerLink="empresas/listar-empresa">
+                            Empresas
+                </button>
+            <span>    
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                        routerLink="etiquetas/listar-etiqueta">
+                            Etiquetas
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                        routerLink="direcciones/listar-direccion">
+                            Direcciones
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                    routerLink="etiquetas/listar-etiqueta">
+                        Códigos de Barras
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                    routerLink="etiquetas/listar-etiqueta">
+                        Etiquetas de Envio
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+                <button class="buttom" 
+                    routerLink="etiquetas/formato-etiqueta">
+                        Formato de Etiquetas
+                </button>
+            <span>
+                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
+            </span>
+            </section>
+        </aside>
     </article>
 </body>
 </html>
