--- a/src/app/direcciones/editar-direccion/editar-direccion.component.html
+++ b/src/app/direcciones/editar-direccion/editar-direccion.component.html
@@ -1,1 +1,23 @@
-<p>editar-direccion works!</p>
+<form [formGroup]="formDireccion" (ngSubmit)="modificarDireccion()">
+    
+    <div>
+        <label for="idDireccion">ID Direccion</label>
+        <input type="number" id="IdDireccion" formControlName="IdDireccion" readonly>
+    </div>
+    <div>
+        <label for="direccion">Direccion</label>
+        <input type="text" id="direccion" formControlName="direccion">
+    </div>
+    <div>
+        <label for="codigoPostal">Código Postal</label>
+        <input type="text" id="codigoPostal" formControlName="codigoPostal">
+    </div>
+    <div>
+        <label for="destino">destino</label>
+        <input type="text" id="destino" formControlName="destino">
+    </div>
+    <div>
+        <button type="submit">Guardar</button>
+        <button (click)= "limpiarCampos()">Guardar</button>
+    </div>
+</form>
