--- a/src/app/inicio/inicio/inicio.component.css
+++ b/src/app/inicio/inicio/inicio.component.css
@@ -9,18 +9,29 @@
         margin-right: 10px;
         border-spacing: 10px;
         border-radius: 2px;
-        background-color: skyblue;
         font-family: 'Roboto', sans-serif;
     /* background-image: url('../img/fondoaws.jpg'); */
     }
     
-    h1 {
+    h1.title {
+        margin: 20px;
+        padding: 20px;
+        border: 5px solid #008489;
+        border-radius: 60px;
+        width: calc(100vw - 60px);
+        height: 3em;   
+        font-size: xx-large;
+        color: #01575a;
+        align-items: center;
+        background-color: #008489;
+        border-radius: 60px;
         text-align: center;
+        vertical-align: middle;
     }
     
-    .titulos {
+    .title {
         display:  center;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         text-align: center;
         color: #01575a ;
@@ -29,24 +40,28 @@
         margin: 1em;
         }
     
-    .container {
+    .menu {
         margin: 20px;
+        padding: 5px;
         border: 5px solid #008489;
         border-radius: 60px;
         width: calc(100vw - 60px);
-        height: calc(100vh - 60px);   
+        max-height: fit-content;   
         display: inline-flex;
         justify-content:space-around;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: row;   
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
     }    
     
     button {
+        margin: 3px;
+        border: 5px solid #008489;
         background-color: #008489;
-        color: white;
+        font-weight: bold;
+        color: #01575a;
         border: 1px solid #008489;
-        font-size: 1.2em;
+        font-size: 1.5em;
         padding: 0.5em 1em;
         border-radius: 0.3em;
         transition: all 400ms ease-in-out;
