--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -8,7 +8,7 @@
 <body>
     <article>
         <section>
-            <h1 class="title" routerLink="./inicio/inicio/inicio.component" >Bienvenido a Muela Manufacturas S.A.</h1>
+            <h1 class="title" routerLink="" >Bienvenido a Muela Manufacturas S.A.</h1>
         </section>
         <aside class="menu">
             <section>
