menu en vertical

--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
+    <title>Inicio</title>
 </head>
 <body>
     <article>
@@ -11,57 +11,34 @@
             <h1 class="title" routerLink="" >Bienvenido a Muela Manufacturas S.A.</h1>
         </section>
         <aside class="menu">
-            <section>
-                <button class="buttom" 
-                        routerLink="productos/listar-producto"> 
-                                Productos
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="empresas/listar-empresa">
-                            Empresas
-                </button>
-            <span>    
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="etiquetas/listar-etiqueta">
-                            Etiquetas
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="direcciones/listar-direccion">
-                            Direcciones
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
+            <button class="buttom" 
+                    routerLink="productos/listar-producto"> 
+                            Productos
+            </button>
+            <button class="buttom" 
+                    routerLink="empresas/listar-empresa">
+                        Empresas
+            </button>
+            <button class="buttom" 
                     routerLink="etiquetas/listar-etiqueta">
-                        Códigos de Barras
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                    routerLink="etiquetas/listar-etiqueta">
-                        Etiquetas de Envio
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                    routerLink="etiquetas/formato-etiqueta">
-                        Formato de Etiquetas
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-            </section>
+                        Etiquetas
+            </button>
+            <button class="buttom" 
+                    routerLink="direcciones/listar-direccion">
+                        Direcciones
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/listar-etiqueta">
+                    Códigos de Barras
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/listar-etiqueta">
+                    Etiquetas de Envio
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/formato-etiqueta">
+                    Formato de Etiquetas
+            </button>     
         </aside>
     </article>
 </body>
