--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
     /* background-image: url('../img/fondoaws.jpg'); */
     }
     
-    h1.title {
+    h1 {
         margin: 20px;
         padding: 20px;
         border: 5px solid #008489;
@@ -21,37 +21,26 @@
         width: calc(100vw - 60px);
         height: 3em;   
         font-size: xx-large;
-        color: #01575a;
+        color:white;
         align-items: center;
         background-color: #008489;
         border-radius: 60px;
         text-align: center;
         vertical-align: middle;
     }
-    
-    .title {
-        display:  center;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: center;
-        color: #01575a ;
-        text-size-adjust: calc(100vw - 10px);
-        align-items: center;
-        margin: 1em;
-        }
-    
+        
     .menu {
         margin: 20px;
-        padding: 5px;
-        border: 5px solid #008489;
+        padding: 20px;
         border-radius: 60px;
-        width: calc(100vw - 60px);
-        max-height: fit-content;   
-        display: inline-flex;
-        justify-content:space-around;
-        align-items: flex-start;
-        flex-direction: row;   
-        flex-wrap: nowrap;
+        max-width: 23em;
+        max-height: fit-content;
+        display: block;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+           
     }    
     
     button {
@@ -59,12 +48,13 @@
         border: 5px solid #008489;
         background-color: #008489;
         font-weight: bold;
-        color: #01575a;
+        color:white;
         border: 1px solid #008489;
         font-size: 1.5em;
         padding: 0.5em 1em;
-        border-radius: 0.3em;
+        border-radius: 1em;
         transition: all 400ms ease-in-out;
+        flex-direction: column;
     }
     
     
@@ -80,3 +70,5 @@
         color: white;
         cursor: not-allowed;
     }
+    
+    
