--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,19 +1,9 @@
-<!-- <h1>Bieenvenido a Muela</h1>
-
-<button routerLink="empresas/listar-empresa">Empresas </button>
-<button routerLink="direcciones/listar-direccion">Direcciones </button>
-<button routerLink="etiquetas/formatoEtiqueta/listar-formato-etiqueta">Formato de etiquetas </button>
-<button routerLink="etiquetas/paginadoEtiqueta/listar-etiqueta">Etiquetas de producto </button>
-
-<button routerLink="generar-etiquetas">Generar etiquetas </button> -->
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
+    <title>Inicio</title>
 </head>
 <body>
     <article>
@@ -21,57 +11,36 @@
             <h1 class="title" routerLink="" >Bienvenido a Muela Manufacturas S.A.</h1>
         </section>
         <aside class="menu">
-            <section>
-                <button class="buttom" 
-                        routerLink="productos/listar-producto"> 
-                                Productos
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="empresas/listar-empresa">
-                            Empresas
-                </button>
-            <span>    
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="etiquetas/listar-etiqueta">
-                            Etiquetas
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                        routerLink="direcciones/listar-direccion">
-                            Direcciones
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
+            <button class="buttom" 
+                    routerLink="productos/listar-producto"> 
+                            Productos
+            </button>
+            <button class="buttom" 
+                    routerLink="empresas/listar-empresa">
+                        Empresas
+            </button>
+            <button class="buttom" 
                     routerLink="etiquetas/listar-etiqueta">
-                        Códigos de Barras
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                    routerLink="etiquetas/listar-etiqueta">
-                        Etiquetas de Envio
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-                <button class="buttom" 
-                    routerLink="etiquetas/formato-etiqueta">
-                        Formato de Etiquetas
-                </button>
-            <span>
-                <!-- <img src=¨src\assets\shopping-cart.svg¨> -->
-            </span>
-            </section>
+                        Etiquetas
+            </button>
+            <button class="buttom" 
+                    routerLink="direcciones/listar-direccion">
+                        Direcciones
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/listar-etiqueta">
+                    Códigos de Barra
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/listar-etiqueta">
+                    Etiquetas de 
+                    Envio
+            </button>
+            <button class="buttom" 
+                routerLink="etiquetas/formato-etiqueta">
+                    Formato de 
+                    Etiquetas
+            </button>     
         </aside>
     </article>
 </body>
