--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -29,11 +29,11 @@
             </button>
             <button class="buttom" 
                 routerLink="etiquetas/listar-etiqueta">
-                    Códigos de Barras
+                    Códigos
             </button>
             <button class="buttom" 
                 routerLink="etiquetas/listar-etiqueta">
-                    Etiquetas de Envio
+                    Etiquetas
             </button>
             <button class="buttom" 
                 routerLink="etiquetas/formato-etiqueta">
