--- a/src/app/empresas/crear-empresa/crear-empresa.component.html
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.html
@@ -25,6 +25,7 @@
                 </div>
                 <div>
                     <button type="submit">Guardar</button>
+                    <button type="submit">Borrar</button>
                 </div>
             </form>
     </article>
