listar empresas ok

--- a/src/app/empresas/listar-empresa/listar-empresa.component.html
+++ b/src/app/empresas/listar-empresa/listar-empresa.component.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listar Empresas</title>
 </head>
-<body>
-    <article class="tabla">
-        <h2>Empresas</h2>
-        <button class="añadir" routerLink="../crear-empresa">Añadir Empresa</button>
+    <body>
+        <article class="tabla">
+            <h2>Empresas</h2>
+            <button class="añadir" routerLink="../crear-empresa">
+                Añadir Empresa
+            </button>
             <table>
                 <tr>
                     <th>NOMBRE EMPRESA</th>
@@ -28,6 +30,6 @@
                     </td>
                 </tr>
             </table> 
-    </article>
-</body>
+        </article>
+    </body>
 </html>
