--- a/src/app/empresas/listar-empresa/listar-empresa.component.css
+++ b/src/app/empresas/listar-empresa/listar-empresa.component.css
@@ -51,11 +51,10 @@
         padding: 5px;
         border: 5px solid #008489;
         border-radius: 60px;
-        width: calc(100vw - 60px);
+        width: 200px;
         max-height: fit-content;   
-        display: inline-flex;
+        display: block;
         justify-content:space-around;
-        align-items: flex-start;
         flex-direction: row;   
         flex-wrap: nowrap;
     }    
@@ -63,8 +62,10 @@
     .tabla {
         align-items: center;
         justify-content: center;
+        float: none;
         border: 5px solid #008489;
         border-radius: 60px;
+        overflow-y: scroll;
     }
     
     button {
@@ -95,6 +96,7 @@
     }
 
     button.añadir {
+        float: right;
         color: aliceblue;
         object-position: right;
         align-items: end;
