--- a/src/app/inicio/inicio/inicio.component.css
+++ b/src/app/inicio/inicio/inicio.component.css
@@ -4,18 +4,17 @@
     box-sizing: border-box;
     } 
     
-    
     body {
         margin-right: 10px;
         border-spacing: 10px;
         border-radius: 2px;
         font-family: 'Roboto', sans-serif;
     }
-    
+
     h1 {
         margin: 20px;
         padding: 20px;
-        border: 5px solid #008489;
+        border: 5px solid #bcd5d6;
         border-radius: 60px;
         width: calc(100vw - 60px);
         height: 3em;   
@@ -29,8 +28,8 @@
     }
         
     .menu {
-        margin: 20px;
         padding: 20px;
+        float: left;
         border-radius: 60px;
         max-width: fit-content;
         max-height: fit-content;
@@ -41,7 +40,13 @@
         justify-content: space-between;
            
     }    
-    
+    /* .lateral {
+        display: block;
+        float: left;
+        border: solid 2px #008489;
+    } */
+
+
     button {
         margin: 3px;
         border: 5px solid #008489;
