crear empresa y botones ok

--- a/src/app/empresas/listar-empresa/listar-empresa.component.css
+++ b/src/app/empresas/listar-empresa/listar-empresa.component.css
@@ -3,8 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     } 
-    
-    
+        
     body {
         margin-right: 10px;
         border-spacing: 10px;
@@ -12,22 +11,6 @@
         font-family: 'Roboto', sans-serif;
     }
     
-    h1.title {
-        margin: 20px;
-        padding: 20px;
-        border: 5px solid #008489;
-        border-radius: 60px;
-        width: calc(100vw - 60px);
-        height: 3em;   
-        font-size: xx-large;
-        color: #01575a;
-        align-items: center;
-        background-color: #008489;
-        border-radius: 60px;
-        text-align: center;
-        vertical-align: middle;
-    }
-
     h2 {
         align-items: center;
         text-decoration: underline;
@@ -35,84 +18,12 @@
         display: flex;
     }
     
-    .title {
-        display:  center;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: center;
-        color: #01575a ;
-        text-size-adjust: calc(100vw - 10px);
-        align-items: center;
-        margin: 1em;
-        }
-    
-    .menu {
-        margin: 20px;
-        padding: 5px;
-        border: 5px solid #008489;
-        border-radius: 60px;
-        width: 200px;
-        max-height: fit-content;   
-        display: block;
-        justify-content:space-around;
-        flex-direction: row;   
-        flex-wrap: nowrap;
-    }    
 
-    .tabla {
-        align-items: center;
-        justify-content: center;
-        float: none;
-        border: 5px solid #008489;
-        border-radius: 60px;
-        overflow-y: scroll;
-    }
-    
-    button {
-        margin: 3px;
-        border: 5px solid #008489;
-        background-color: #008489;
-        font-weight: bold;
-        color: #01575a;
-        border: 1px solid #008489;
-        font-size: 1.5em;
-        padding: 0.5em 1em;
-        border-radius: 0.3em;
-        transition: all 400ms ease-in-out;
-    }
-    
-    
-    button:hover {
-        background-color: white;
-        color: #008489;
-        cursor: pointer;
-    }
-    
-    button[disabled] {
-        background-color: rgba(0, 132, 137, 0.3);
-        border: 1px solid rgba(0, 132, 137, 0.3);
-        color: white;
-        cursor: not-allowed;
-    }
-
-    button.añadir {
-        float: right;
-        color: aliceblue;
-        object-position: right;
-        align-items: end;
-        justify-content: flex-end;
-    }
-    
-    .cont-tabla {
-        width: 100%;
-        overflow-x: scroll;  /* auto */
-    }
-    
     table {
         width: 60%;
         padding: 1em;
         box-shadow: 2px 2px 3px grey;
-        margin: 1em auto;
+        margin: auto;
     }
     
     th {
@@ -136,3 +47,47 @@
     td:nth-child(3) {
         text-align: center;
     }
+
+        
+    button {
+        margin: 3px;
+        border: 5px solid #008489;
+        background-color: #008489;
+        font-weight: bold;
+        color: #01575a;
+        border: 1px solid #008489;
+        font-size: 1.5em;
+        padding: 0.5em 1em;
+        border-radius: 0.3em;
+        transition: all 400ms ease-in-out;
+    }
+    
+    button:hover {
+        background-color: white;
+        color: #008489;
+        cursor: pointer;
+    }
+    
+    button[disabled] {
+        background-color: rgba(0, 132, 137, 0.3);
+        border: 1px solid rgba(0, 132, 137, 0.3);
+        color: white;
+        cursor: not-allowed;
+    }
+
+    button.submit {
+        float: right;
+        color: teal;
+        border-radius: 0.3em;
+        background-color: white;
+        object-position: right;
+        align-items: end;
+        justify-content: flex-end;
+    }
+
+    button.submit:hover {
+        background-color:#54bec2;
+        color: white;
+        cursor: pointer;
+    }
+      
