--- a/src/app/empresas/crear-empresa/crear-empresa.component.css
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.css
@@ -3,10 +3,11 @@
     padding: 0;
 }
 
-form {
-    width: 60%;
-    margin: 2em auto;
-    padding: 1em;
+body {
+    margin-right: 10px;
+    border-spacing: 10px;
+    border-radius: 2px;
+    font-family: 'Roboto', sans-serif;
 }
 
 h2 {
@@ -16,12 +17,16 @@ h2 {
     display: flex;
 }
 
-.tabla {
-    align-items: center;
-    justify-content: center;
-    border: 5px solid #008489;
-    border-radius: 60px;
+form {
+    width: 60%;
+    margin: 2em auto;
+    padding: 1em;
 }
+
+.id {
+    display: none;
+}
+
 label,
 input {
     width: calc(100% - 2em);
@@ -64,4 +69,61 @@ input:checked ~ .check-mark.green {
 
 input:checked ~ .check-mark.yellow {
     background-color: yellow;
+}
+
+button {
+    margin: 3px;
+    border: 5px solid #008489;
+    background-color: #008489;
+    font-weight: bold;
+    color: #01575a;
+    border: 1px solid #008489;
+    font-size: 1.5em;
+    padding: 0.5em 1em;
+    border-radius: 0.3em;
+    transition: all 400ms ease-in-out;
+}
+
+button:hover {
+    background-color: white;
+    color: #008489;
+    cursor: pointer;
+}
+
+button[disabled] {
+    background-color: rgba(0, 132, 137, 0.3);
+    border: 1px solid rgba(0, 132, 137, 0.3);
+    color: white;
+    cursor: not-allowed;
+}
+
+button.submit {
+    float: right;
+    color: teal;
+    border-radius: 0.3em;
+    background-color: white;
+    object-position: right;
+    align-items: end;
+    justify-content: flex-end;
+}
+
+button.submit:hover {
+    background-color:#23b165;
+    color: white;
+    cursor: pointer;
+}
+button.reset {
+    float: left;
+    color: teal;
+    border-radius: 0.3em;
+    background-color: white;
+    object-position: right;
+    align-items: end;
+    justify-content: flex-end;
+}
+
+button.reset:hover {
+    background-color:red;
+    color: white;
+    cursor: pointer;
 }
