--- a/src/app/empresas/crear-empresa/crear-empresa.component.html
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.html
@@ -5,29 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Empresa</title>
 </head>
-<body>
-    <article class="tabla">
-        <h2>
-            Crear Empresas
-        </h2>
-            <form [formGroup]="formEmpresa" (ngSubmit)="crearEmpresa()">
-                <div>
-                    <label for="idEmpresa">Id Empresa</label>
-                    <input type="number" id="idEmpresa" formControlName="idEmpresa">
-                </div>
-                <div>
-                    <label for="nombreEmpresa">Nombre Empresa</label>
-                    <input type="text" id="nombreEmpresa" formControlName="nombreEmpresa">
-                </div>
-                <div>
-                    <label for="idDireccion">Id Direccion</label>
-                    <input type="number" id="idDireccion" formControlName="idDireccion">
-                </div>
-                <div>
-                    <button type="submit">Guardar</button>
-                    <button type="submit">Borrar</button>
-                </div>
-            </form>
-    </article>
-</body>
+    <body>
+        <article class="tabla">
+            <h2>
+                Crear Empresas
+            </h2>
+                <form [formGroup]="formEmpresa" 
+                        (ngSubmit)="crearEmpresa()">
+                    <div class="id">  
+                        <label for="idEmpresa">
+                            Id Empresa
+                        </label>
+                        <input type="number" 
+                            id="idEmpresa" 
+                            formControlName="idEmpresa">
+                    </div>
+                    <div>
+                        <label for="nombreEmpresa">
+                            Nombre Empresa
+                        </label>
+                        <input type="text" 
+                            id="nombreEmpresa" 
+                            formControlName="nombreEmpresa">
+                    </div>
+                    <div class="id"> 
+                        <label for="idDireccion">Id Direccion</label>
+                        <input type="number" id="idDireccion" formControlName="idDireccion">
+                    </div>
+                    <div> 
+                        <label for="direccion">
+                            Direccion
+                        </label>
+                        <input type="text" 
+                            id="Direccion" 
+                            formControlName="direccion">
+                    </div>
+                    <div>
+                        <label for="codigoPostal">
+                            Código Postal
+                        </label>
+                        <input type="number" 
+                            id="codigoPostal" 
+                            formControlName="codigoPostal">
+                    </div>
+                    <div> 
+                        <label for="destino">
+                            Destino
+                        </label>
+                        <input type="text" 
+                            id="destino" 
+                            formControlName="destino">
+                    </div>
+                    <div>
+                        <button type="reset"
+                                class="reset">
+                            Borrar
+                        </button>
+                        <button type="submit"
+                                class="submit">
+                            Guardar
+                        </button>
+                    </div>
+                </form>
+        </article>
+    </body>
 </html>
