--- a/src/app/empresas/listar-empresa/listar-empresa.component.html
+++ b/src/app/empresas/listar-empresa/listar-empresa.component.html
@@ -8,14 +8,20 @@
     <body>
         <article class="tabla">
             <h2>Empresas</h2>
-            <button class="añadir" routerLink="../crear-empresa">
-                Añadir Empresa
-            </button>
             <table>
                 <tr>
                     <th>NOMBRE EMPRESA</th>
                     <th>DIRECCIÓN</th>
-                    <th></th>
+                    <th>
+                        <button class="submit" 
+                                routerLink="../crear-empresa">
+                            Añadir Empresa
+                        </button>
+                        <button class="submit" 
+                                routerLink="">
+                            Aceptar
+                        </button>
+                    </th>
                 
                 <tr *ngFor="let empresa of empresas">
                     <td>{{empresa.nombreEmpresa}}</td>
