--- a/src/app/empresas/crear-empresa/crear-empresa.component.html
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.html
@@ -6,9 +6,9 @@
     <title>Crear Empresa</title>
 </head>
     <body>
-        <article class="tabla">
+        <article class="form">
             <h2>
-                Crear Empresas
+                Crear o Editar Empresa
             </h2>
                 <form [formGroup]="formEmpresa" 
                         (ngSubmit)="crearEmpresa()">
