--- a/src/app/empresas/crear-empresa/crear-empresa.component.css
+++ b/src/app/empresas/crear-empresa/crear-empresa.component.css
@@ -11,13 +11,24 @@ body {
 }
 
 h2 {
+    margin: 20px;
+    padding: 20px;
+    border: 5px solid #008489;
+    border-radius: 60px;
+    height: 3em;   
+    font-size: xx-large;
+    color: #01575a;
     align-items: center;
+    background-color: white;
+    border-radius: 60px;
+    text-align: center;
+    vertical-align: middle;
     text-decoration: underline;
     justify-content: center;
     display: flex;
 }
 
-form {
+.form {
     width: 60%;
     margin: 2em auto;
     padding: 1em;
@@ -112,6 +123,7 @@ button.submit:hover {
     color: white;
     cursor: pointer;
 }
+
 button.reset {
     float: left;
     color: teal;
