--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,26 @@
         text-align: center;
         vertical-align: middle;
     }
+
+    h2 {
+        margin: 20px;
+        padding: 20px;
+        border: 5px solid #008489;
+        border-radius: 60px;
+        height: 3em;   
+        font-size: xx-large;
+        color: #01575a;
+        align-items: center;
+        background-color: white;
+        border-radius: 60px;
+        text-align: center;
+        vertical-align: middle;
+        text-decoration: underline;
+        justify-content: center;
+        display: flex;
+    }
         
+    
      .menu {
         padding: 20px;
         float: left;
