requiered con error

--- a/src/app/direcciones/crear-direccion/crear-direccion.component.html
+++ b/src/app/direcciones/crear-direccion/crear-direccion.component.html
@@ -18,7 +18,9 @@
                         </label>
                         <input type="text" 
                                 id="direccion" 
-                                formControlName="direccion">
+                                formControlName="direccion"
+                                autofocus
+                                required>
                     </div>
                     <div>
                         <label for="codigoPostal">
@@ -26,7 +28,8 @@
                         </label>
                         <input type="text" 
                                id="codigoPostal" 
-                               formControlName="codigoPostal">
+                               formControlName="codigoPostal"
+                               required>
                     </div>
                     <div>
                         <label for="destino">
@@ -34,7 +37,8 @@
                         </label>
                         <input  type="text" 
                                 id="destino" 
-                                formControlName="destino">
+                                formControlName="destino"
+                                required>
                     </div>
                     <div>
                         <button type="submit"
